src/components/Notification/Notification.scss
@use '@/styles/animations.scss' as *;

$spacing-right: $spacing-3;
$arrow-size: 12px;

.weni-notification {
  display: flex;
  gap: $spacing-1;
  flex-direction: flex;
  align-items: flex-start;
  
  width: max-content;

  position: absolute;
  bottom: calc(100% + $spacing-1);
  max-width: 260px;
  background-color: $bg-base;
  border-radius: $border-radius-2;
  padding: $spacing-4;
  box-shadow: 0 -1px 15px 0 rgba(0, 0, 0, 0.10);

  * {
    font: $fs-text-weight-regular #{$fs-text-size-0}/1.2 $font-family;
  }

  &__content {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    cursor: pointer;
  }

  &__close-button {
    margin-top: -$spacing-3;
    margin-right: -$spacing-3;
    flex-shrink: 0;
    width: fit-content;
  }
}

.weni-widget--bottom-right .weni-notification {
  right: 0;
}

.weni-widget--bottom-left .weni-notification {
  left: 0;
}

.weni-widget--bottom-right .weni-notification {
  @include weni-animation(0, 0.25s, weni-expand-in-bottom-right);
}

.weni-widget--bottom-left .weni-notification {
  @include weni-animation(0, 0.25s, weni-expand-in-bottom-left);
}

